<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:text="@string/my_wallet"
        android:textSize="50sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="488dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/login"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/user"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-."
                android:maxLength="20"
                android:inputType="numberPassword"
                android:autofillHints="Username"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:autofillHints="Password"/>


            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/log_btn"
                android:textSize="18sp"
                android:onClick="Login"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
